--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ PyJWT==2.1.0
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
-djangorestframework-simplejwt
-django-extensions # для тестов эндпоинтов через консоль
-
+djangorestframework-simplejwt==5.3.1
+django-filter==24.3
+django-extensions==3.2.3
