Исправил ошибки в prmissions, serializers, views, models

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,6 @@
-[settings]
+[isort]
+src_paths = api_yamdb
 line_length = 79
 known_first_party = api_yamdb
 multi_line_output = 3
-known_third_party = drf 
+known_third_party = drf
